# pane-management-v0.4.0

./: .gitignore  BACKLOG.md  CLAUDE.md  DEPENDENCIES.md  PORTABILITY-AUDIT.md  SETUP-GUIDE.md
.planning/: PIVOT-NOTE.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-foundation-session-discovery/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  (+6 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
workspace-resume/: dev-loop.ps1  grid-test.html  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
workspace-resume/scripts/: msvc-env.sh  prepare-release.sh  verify-release.sh
workspace-resume/src/: App.tsx  index.css  solid-dnd.d.ts
workspace-resume/src-tauri/: Cargo.toml  tauri.conf.json
workspace-resume/src-tauri/.cargo/: config.toml
workspace-resume/src-tauri/capabilities/: default.json
workspace-resume/src-tauri/icons/: icon.icns
workspace-resume/src-tauri/src/: lib.rs  main.rs
workspace-resume/src-tauri/src/commands/: discovery.rs  launcher.rs  mod.rs  project_meta.rs  tmux.rs
workspace-resume/src-tauri/src/models/: mod.rs  pane_preset.rs  project.rs  project_meta.rs  session.rs  settings.rs  tmux_state.rs
workspace-resume/src-tauri/src/services/: mod.rs  path_decoder.rs  scanner.rs  watcher.rs
workspace-resume/src-tauri/src/services/terminal/: mod.rs  powershell.rs  tmux.rs  warp.rs
workspace-resume/src-tauri/tests/fixtures/: corrupted_session.jsonl  last_prompt_session.jsonl  meta_only_session.jsonl  normal_session.jsonl
(+50 files in other folders)
