[package]
name = "workspace-resume"
version = "0.1.0"
description = "A Tauri app for resuming Claude Code sessions"
authors = ["you"]
edition = "2021"

[lib]
name = "workspace_resume_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-store = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-window-state = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6"
rev_lines = "0.3"
glob = "0.3"
dirs = "5"
tokio = { version = "1", features = ["sync", "time", "rt"] }
open = "5"
serde_yaml = "0.9"
urlencoding = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = ["Win32_System_Threading", "Win32_Foundation"] }

[dev-dependencies]
tempfile = "3"
